refactor: use ServiceLoader for language discovery and rename C_CPP constant